Requête Jooq CUF, requête Jooq exigence partielle